--- a/style.css
+++ b/style.css
@@ -453,6 +453,7 @@ footer {
         max-width: 100%;
         height: 150%;
         position: relative;
+        /* scale: (-2); */
     }
 
     .page-title {
@@ -469,10 +470,11 @@ footer {
         max-width: 100%;
         height: 150%;
         position: relative;
+        /* scale: (-2); */
     }
 
     body {
-        font-size: 10px;
+        /* font-size: 10px; */
     }
 }
 
@@ -486,6 +488,6 @@ footer {
 
 @media (max-width: 1132px) {
     body {
-        font-size: 15px;
+        /* font-size: 15px; */
     }
 }
